# Web3bridge-Rust-Masterclass-Cohort-I

./: .gitignore  Cargo.toml  README.md
live-session/week-6/soroban-hello-world/: .gitignore
live-session/week-7/first_contract/: .gitignore
src/: main.rs
submissions/week-1/Day-3/: Josiah-Obeka- day3.md
submissions/week-1/day-2/Abigael_Nyangasi-Basic_Arithmetic/: Cargo.toml  README.md
submissions/week-1/day-2/Josiah-Obeka/: README.md
submissions/week-1/day-3/ArosoEmmanuel/: SUMMARY.md
submissions/week-1/day-4/Godswill-Day4-Tasks/: .gitignore  Cargo.toml  README.md
submissions/week-1/day-5/kehinde-arowolo-day5-task2/: Cargo.toml
submissions/week-2/day-2/Godswill-Class-Management-System/: Cargo.toml
submissions/week-2/day-2/Godswill-Class-Management-System/src/: lib.rs  main.rs  management_system.rs  student.rs  ui.rs
submissions/week-2/day-2/Godswill-Class-Management-System/tests/: integration_tests.rs
submissions/week-4/: kuranga-ridwan.md
submissions/week-4/theophilus-ige/: task-node.md  task-stylus-js.md  task-stylus-zig.md
submissions/week-5/: Gbolahan-Akande.md
submissions/week-5/theophilus-ige/: task-ReentrancyGuard.md  task-erc-20.md  task-erc-6909.md  task-string.md
submissions/week-6/day-4/oghenerukevwe-sandra-idjighere/contracts/sep41-token/: Cargo.toml  Makefile
submissions/week-6/day-4/oghenerukevwe-sandra-idjighere/contracts/sep41-token/src/: contract.rs  interface.rs  lib.rs  storage.rs  test.rs  test_simple.rs
submissions/week-7/day-1/Alfred-Olumide-Adenigba/sep-41/contracts/ems/: Cargo.toml
submissions/week-7/day-1/Alfred-Olumide-Adenigba/sep-41/contracts/ems/src/: events.rs  impls.rs  lib.rs  storage.rs  test.rs  token_interface.rs  traits.rs
submissions/week-7/day-1/Yinka-Habeeb/: Cargo.toml
submissions/week-7/day-1/Yinka-Habeeb/contracts/hello-world/src/: employee.rs  lib.rs  test.rs  token.rs
submissions/week-7/day-1/Yinka-Habeeb/contracts/hello-world/test_snapshots/test/: test_employee_pay.1.json
tasks/week-6/day-4/: task-1.md
tasks/week-7/day-1/: task.md
tasks/week-7/day-4/: task-1.md
(+259 files in other folders)
